# steamdepot

./: .gitmodules  Cargo.toml  README.md  SteamProtocolBreakdown.md
.github/workflows/: release.yml
steam-mail/: Cargo.toml
steam-mail/src/: lib.rs
steamdepot/: Cargo.toml  build.rs
steamdepot-cli/: Cargo.toml
steamdepot-cli/src/: main.rs
steamdepot/src/: auth.rs  cdn.rs  connection.rs  crypto.rs  depot.rs  download.rs  emsg.rs  error.rs  keyvalues.rs  lib.rs  login.rs  pics.rs  session.rs
steamdepot/src/steam_api/: cm_list.rs  mod.rs
