[package]
name = "steamdepot-cli"
version = "0.3.0"
edition = "2024"
description = "CLI tool for downloading Steam depot content"
license = "LGPL-2.1-only"
repository = "https://github.com/EliCunninghamDev/stemdepot"

[dependencies]
steamdepot = { path = "../steamdepot", version = "0.3.3" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
