[package]
name = "steamdepot"
version = "0.3.3"
edition = "2024"
description = "Steam depot downloader library — CM connection, authentication, PICS, CDN, and chunk downloading"
license = "LGPL-2.1-only"
repository = "https://github.com/EliCunninghamDev/stemdepot"

[dependencies]
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
flate2 = "1"
lzma-rs = "0.3"
aes = "0.8"
ecb = "0.1"
cbc = "0.1"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
ruzstd = "0.7"
rsa = "0.9"

[build-dependencies]
prost-build = "0.13"
